--- a/composer.json
+++ b/composer.json
@@ -30,14 +30,14 @@
     },
     "require": {
         "php": "^7.2|^8.0",
-        "symfony/config": "^5.4|^6.0",
-        "symfony/dependency-injection": "^5.4|^6.0",
-        "symfony/event-dispatcher": "^5.4|^6.0",
-        "symfony/framework-bundle": "^4.4.1|^5.0|^6.0",
-        "symfony/http-foundation": "^5.4|^6.0",
-        "symfony/http-kernel": "^5.4|^6.0",
-        "symfony/routing": "^5.4|^6.0",
-        "symfony/security-core": "^5.4|^6.0",
+        "symfony/config": "^5.4|^6.0|^7.0",
+        "symfony/dependency-injection": "^5.4|^6.0|^7.0",
+        "symfony/event-dispatcher": "^5.4|^6.0|^7.0",
+        "symfony/framework-bundle": "^4.4.1|^5.0|^6.0|^7.0",
+        "symfony/http-foundation": "^5.4|^6.0|^7.0",
+        "symfony/http-kernel": "^5.4|^6.0|^7.0",
+        "symfony/routing": "^5.4|^6.0|^7.0",
+        "symfony/security-core": "^5.4|^6.0|^7.0",
         "willdurand/jsonp-callback-validator": "^1.0|^2.0",
         "willdurand/negotiation": "^2.0|^3.0"
     },
@@ -49,19 +49,19 @@
         "psr/http-message": "^1.0",
         "psr/log": "^1.0|^2.0|^3.0",
         "sensio/framework-extra-bundle": "^6.1",
-        "symfony/phpunit-bridge": "^5.4|^6.0",
-        "symfony/asset": "^5.4|^6.0",
-        "symfony/browser-kit": "^5.4|^6.0",
-        "symfony/css-selector": "^5.4|^6.0",
-        "symfony/expression-language": "^5.4|^6.0",
-        "symfony/form": "^5.4|^6.0",
-        "symfony/mime": "^5.4|^6.0",
-        "symfony/security-bundle": "^5.4|^6.0",
-        "symfony/serializer": "^5.4|^6.0",
-        "symfony/twig-bundle": "^5.4|^6.0",
-        "symfony/validator": "^5.4|^6.0",
-        "symfony/web-profiler-bundle": "^5.4|^6.0",
-        "symfony/yaml": "^5.4|^6.0"
+        "symfony/phpunit-bridge": "^5.4|^6.0|^7.0",
+        "symfony/asset": "^5.4|^6.0|^7.0",
+        "symfony/browser-kit": "^5.4|^6.0|^7.0",
+        "symfony/css-selector": "^5.4|^6.0|^7.0",
+        "symfony/expression-language": "^5.4|^6.0|^7.0",
+        "symfony/form": "^5.4|^6.0|^7.0",
+        "symfony/mime": "^5.4|^6.0|^7.0",
+        "symfony/security-bundle": "^5.4|^6.0|^7.0",
+        "symfony/serializer": "^5.4|^6.0|^7.0",
+        "symfony/twig-bundle": "^5.4|^6.0|^7.0",
+        "symfony/validator": "^5.4|^6.0|^7.0",
+        "symfony/web-profiler-bundle": "^5.4|^6.0|^7.0",
+        "symfony/yaml": "^5.4|^6.0|^7.0"
     },
     "suggest": {
         "sensio/framework-extra-bundle": "Add support for the request body converter and the view response listener, requires ^3.0",
